--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Documentación sobre Azure Digital Twins
-summary: Aprenda a usar Azure Digital Twins para crear una representación digital de sus recursos, entornos y sistemas empresariales, con el fin de crear soluciones de IoT de última generación que modelen el mundo real.
+summary: Aprenda a usar Azure Digital Twins mediante la creación de una arquitectura de gemelos digitales que actúa como representación de sus recursos, entornos y sistemas empresariales, con el fin de crear soluciones de IoT de última generación que modelen el mundo real.
 metadata:
   title: 'Documentación sobre Azure Digital Twins: tutoriales y referencia de API | Microsoft Docs'
   description: Aprenda a usar Azure Digital Twins tanto para conectar personas, lugares y cosas como para compilar soluciones de IoT con inteligencia espacial.
@@ -9,19 +9,19 @@ metadata:
   ms.collection: collection
   author: philmea
   ms.author: philmea
-  ms.date: 08/19/2021
-  ms.openlocfilehash: 10a8c3304ca24a02d62105ab62b6cc4cd9d135ba
-  ms.sourcegitcommit: 2da83b54b4adce2f9aeeed9f485bb3dbec6b8023
+  ms.date: 10/5/2021
+  ms.openlocfilehash: 24253bfc9abb69ca4c1ebef3b8bb73b54fe05d0f
+  ms.sourcegitcommit: 147910fb817d93e0e53a36bb8d476207a2dd9e5e
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 08/24/2021
-  ms.locfileid: "122769195"
+  ms.lasthandoff: 10/18/2021
+  ms.locfileid: "130132329"
 landingContent:
 - title: Acerca de Azure Digital Twins
   linkLists:
   - linkListType: overview
     links:
-    - text: ¿Qué es Azure Digital Twins?
+    - text: ¿Qué es Azure Digital Twins? (Incluye una arquitectura de ejemplo)
       url: overview.md
   - linkListType: concept
     links:
@@ -69,12 +69,20 @@ landingContent:
     links:
     - text: Escritura de código de autenticación de aplicación
       url: how-to-authenticate-client.md
-- title: Detección de las API
+- title: Detección de API y SDK
   linkLists:
   - linkListType: reference
     links:
     - text: API de REST
       url: /rest/api/azure-digitaltwins/
+  - linkListType: reference
+    links:
+    - text: SDK de .NET de plano de control (C#)
+      url: /dotnet/api/overview/azure/digitaltwins/management?view=azure-dotnet&preserve-view=true
+  - linkListType: reference
+    links:
+    - text: SDK de .NET de plano de datos (C#)
+      url: /dotnet/api/overview/azure/digitaltwins/client?view=azure-dotnet&preserve-view=true
   - linkListType: concept
     links:
     - text: API y SDK de Azure Digital Twins
