--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -129,7 +129,17 @@
             - name: Azure Blob Storage
               href: event-schema-blob-storage.md
             - name: Azure Communication Services
-              href: event-schema-communication-services.md
+              items:
+                - name: Introducción
+                  href: event-schema-communication-services.md
+                - name: Eventos de chat
+                  href: communication-services-chat-events.md
+                - name: Eventos de telefonía y SMS
+                  href: communication-services-telephony-sms-events.md
+                - name: Eventos de llamadas de voz y videollamadas
+                  href: communication-services-voice-video-events.md
+                - name: Eventos presenciales
+                  href: communication-services-presence-events.md
             - name: Azure Container Registry
               href: event-schema-container-registry.md
             - name: Azure Event Hubs
