--- a/articles/automanage/TOC.yml
+++ b/articles/automanage/TOC.yml
@@ -42,4 +42,4 @@
     - name: Preguntas más frecuentes
       href: faq.yml
     - name: Plataforma de adopción de la nube
-      href: 'https://docs.microsoft.com/azure/cloud-adoption-framework/manage/azure-server-management'
+      href: /azure/cloud-adoption-framework/manage/azure-server-management
