--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -733,9 +733,9 @@
     - name: Vídeos
       href: identity-videos.md
     - name: Blog para desarrolladores de la plataforma de identidad de Microsoft
-      href: 'https://developer.microsoft.com/en-us/identity/blogs/'
+      href: 'https://developer.microsoft.com/identity/blogs/'
     - name: Blog de Azure AD
-      href: 'https://cloudblogs.microsoft.com/enterprisemobility/?product=azure-active-directory'
+      href: 'https://techcommunity.microsoft.com/t5/azure-active-directory-identity/bg-p/Identity'
     - name: Azure Roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
     - name: Probar Iniciar sesión con Microsoft
