--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -63,8 +63,6 @@ items:
             href: 'https://azure.github.io/communication-ui-library/?path=/story/quickstarts-statefulclient--page'
           - name: Introducción a los componentes de la interfaz de usuario
             href: 'https://azure.github.io/communication-ui-library/?path=/story/quickstarts-uicomponents--page'
-          - name: Incorporación de la composición de las llamadas a una aplicación móvil
-            href: quickstarts/ui-library/get-started-call.md
       - name: Acceso a retransmisiones TURN
         href: quickstarts/relay-token.md
   - name: Tutoriales
@@ -137,10 +135,6 @@ items:
             href: concepts/ui-library/ui-library-overview.md
           - name: Casos de uso de la biblioteca de interfaz de usuario
             href: concepts/ui-library/ui-library-use-cases.md
-          - name: Introducción a la biblioteca de interfaz de usuario para dispositivos móviles
-            href: concepts/ui-library/mobile-ui-library.md
-          - name: Casos de uso de la biblioteca de interfaz de usuario para dispositivos móviles
-            href: concepts/ui-library/mobile-ui-use-cases.md
       - name: SDK y API REST
         href: concepts/sdk-options.md
       - name: Arquitectura de cliente y servidor
@@ -157,13 +151,13 @@ items:
         href: concepts/notifications.md
       - name: Interoperabilidad de Teams
         items:
-          - name: Información general
+          - name: Introducción
             href: concepts/teams-interop.md
           - name: Unión a una reunión de Teams
             href: concepts/join-teams-meeting.md
       - name: Eventos de servicio (EventGrid)
         items:
-          - name: Información general
+          - name: Introducción
             href: ../event-grid/event-schema-communication-services.md
             maintainContext: true
           - name: Eventos de chat
