commit translated contents

--- a/articles/partner-solutions/toc.yml
+++ b/articles/partner-solutions/toc.yml
@@ -1,99 +1,13 @@
 - name: Documentación de soluciones de asociados de Azure
   href: overview.md
 - name: Soluciones de socios
+  expanded: true
   items:
     - name: Apache Kafka en Confluent Cloud
-      items:
-        - name: Información general
-          items:
-            - name: ¿Qué es Confluent Cloud en Azure?
-              href: ./apache-kafka-confluent-cloud/overview.md
-        - name: Guías de inicio rápido
-          items:
-            - name: Portal de Azure
-              href: ./apache-kafka-confluent-cloud/create.md
-            - name: Azure CLI
-              href: ./apache-kafka-confluent-cloud/create-cli.md
-              displayName: 'Azure CLI, az confluent organization create, az confluent organization wait, az confluent organization list, az confluent organization show'
-        - name: Procedimientos
-          items:
-            - name: Incorporación de conectores
-              href: ./apache-kafka-confluent-cloud/add-connectors.md
-            - name: Administrar
-              href: ./apache-kafka-confluent-cloud/manage.md
-              displayName: 'Azure CLI, az confluent organization delete'
-            - name: Solución de problemas
-              items:
-                - name: Obtención de soporte técnico
-                  href: ./apache-kafka-confluent-cloud/get-support.md
-                - name: Solución de errores comunes
-                  href: ./apache-kafka-confluent-cloud/troubleshoot.md
-        - name: Referencia
-          items:
-            - name: Azure CLI
-              href: /cli/azure/confluent
-            - name: Azure PowerShell
-              href: /powershell/module/az.confluent/#confluent
+      href: ./apache-kafka-confluent-cloud/index.yml
     - name: Datadog
-      items:
-        - name: Información general
-          items:
-            - name: ¿Qué es Datadog?
-              href: ./datadog/overview.md
-              displayName: 'Datadog, Monitoring'
-        - name: Guías de inicio rápido
-          items:
-            - name: Creación de una organización de Datadog
-              href: ./datadog/create.md
-            - name: Vínculo a una organización de Datadog existente
-              href: ./datadog/link-to-existing-organization.md
-        - name: Procedimientos
-          items:
-            - name: Configuración de la implementación previa
-              href: ./datadog/prerequisites.md
-            - name: Administrar
-              href: ./datadog/manage.md
-            - name: Solución de problemas
-              items:
-                - name: Obtención de soporte técnico
-                  href: ./datadog/get-support.md
-                - name: Solución de errores comunes
-                  href: ./datadog/troubleshoot.md
-        - name: Referencia
-          items:
-            - name: Azure CLI
-              href: /cli/azure/datadog
+      href: ./datadog/index.yml
     - name: Elastic
-      items:
-        - name: Información general
-          items:
-            - name: ¿Qué es Elastic?
-              href: ./elastic/overview.md
-        - name: Guías de inicio rápido
-          items:
-            - name: Creación de recursos de Elastic
-              href: ./elastic/create.md
-        - name: Procedimientos
-          items:
-            - name: Administración de la integración
-              href: ./elastic/manage.md
-            - name: Solución de problemas
-              href: ./elastic/troubleshoot.md
+      href: ./elastic/index.yml
     - name: Logz.io
-      items:
-        - name: Información general
-          items:
-            - name: ¿Qué es Logz.io?
-              href: ./logzio/overview.md
-        - name: Guías de inicios rápidos
-          items:
-            - name: Creación de un recurso de Logz.io
-              href: ./logzio/create.md
-        - name: Procedimientos
-          items:
-            - name: Administrar
-              href: ./logzio/manage.md
-            - name: Configuración del inicio de sesión único
-              href: ./logzio/setup-sso.md
-            - name: Solución de problemas
-              href: ./logzio/troubleshoot.md
+      href: ./logzio/index.yml
