--- a/articles/azure-monitor/azure-monitor-app-hub.yml
+++ b/articles/azure-monitor/azure-monitor-app-hub.yml
@@ -332,13 +332,13 @@ conceptualContent:
         - url: ./app/export-telemetry.md
           itemType: how-to-guide
           text: Exportación de telemetría
-        - url: ./app/export-stream-analytics.md
+        - url: ../stream-analytics/app-insights-export-stream-analytics.md
           itemType: how-to-guide
           text: Exportación a Stream Analytics
-        - url: ./app/code-sample-export-sql-stream-analytics.md
+        - url: ../stream-analytics/app-insights-export-sql-stream-analytics.md
           itemType: how-to-guide
           text: Exportación a SQL con Stream Analytics
-        - url: ./app/code-sample-export-sql-stream-analytics.md
+        - url: ../stream-analytics/app-insights-export-sql-stream-analytics.md
           itemType: how-to-guide
           text: Modelo de exportación de datos
         - url: ./logs/logicapp-flow-connector.md
