--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -187,27 +187,27 @@
         - name: General
           href: ./faq.yml
         - name: Facturación
-          href: /azure/azure-vmware/faq#billing
+          href: ./faq.yml
         - name: Comunicación al cliente
-          href: /azure/azure-vmware/faq#customer-communication
+          href: ./faq.yml
         - name: Instalación y configuración
-          href: /azure/azure-vmware/faq#configuration-and-setup
+          href: ./faq.yml
         - name: Software de VMware
-          href: /azure/azure-vmware/faq#vmware-software
+          href: ./faq.yml
         - name: Soluciones de copia de seguridad de terceros
-          href: /azure/azure-vmware/faq#third-party-backup-and-recovery
+          href: ./faq.yml
         - name: Compute
-          href: /azure/azure-vmware/faq#compute
+          href: ./faq.yml
         - name: Redes e interconectividad
-          href: /azure/azure-vmware/faq#networking-and-interconnectivity
+          href: ./faq.yml
         - name: Storage
-          href: /azure/azure-vmware/faq#storage
+          href: ./faq.yml
         - name: 'Hosts, clústeres y nubes privadas'
-          href: '/azure/azure-vmware/faq#hosts,-clusters,-and-private-clouds'
+          href: ./faq.yml
         - name: Administración de identidades
-          href: /azure/azure-vmware/faq#identity-management
+          href: ./faq.yml
         - name: CSP y multiinquilino
-          href: /azure/azure-vmware/faq#csp-and-multi-tenancy
+          href: ./faq.yml
     - name: Vídeos
       items:
         - name: Lista de reproducción
