--- a/articles/static-web-apps/TOC.yml
+++ b/articles/static-web-apps/TOC.yml
@@ -130,3 +130,5 @@
       href: 'https://azure.microsoft.com/pricing/details/app-service/static/'
     - name: Cuotas
       href: quotas.md
+    - name: Preguntas más frecuentes
+      href: faq.yml
