--- a/articles/defender-for-iot/device-builders/index.yml
+++ b/articles/defender-for-iot/device-builders/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Documentación sobre Azure Defender para IoT para creadores de dispositivos
-summary: Azure Defender para IoT proporciona una completa detección de amenazas para entornos de IoT/OT y tiene varias opciones de implementación, entre las que se incluyen la implementación completamente local, la conectada a la nube o una híbrida.
+summary: 'Azure Defender para IoT proporciona una completa detección de amenazas para entornos de IoT/OT y tiene varias opciones de implementación, entre las que se incluyen la implementación completamente local, la conectada a la nube o una híbrida. NOTA: Azure Defender para IoT se va a llamar ahora Microsoft Defender para IoT. La documentación se actualizará pronto.'
 metadata:
   title: Documentación sobre Azure Defender para IoT para creadores de dispositivos
   description: Azure Defender para IoT proporciona una completa detección de amenazas para entornos de IoT/OT y tiene varias opciones de implementación, entre las que se incluyen la implementación completamente local, la conectada a la nube o una híbrida.
@@ -12,12 +12,12 @@ metadata:
   ms.author: v-ekrieg
   manager: raynew
   ms.date: 06/17/2021
-  ms.openlocfilehash: c4853f4ca1017510c24a97fd4c974972667e26df
-  ms.sourcegitcommit: a038863c0a99dfda16133bcb08b172b6b4c86db8
+  ms.openlocfilehash: 0c46acdd0a6e5f1278710b0ad66acc3eab9adb78
+  ms.sourcegitcommit: 106f5c9fa5c6d3498dd1cfe63181a7ed4125ae6d
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 06/29/2021
-  ms.locfileid: "113013984"
+  ms.lasthandoff: 11/02/2021
+  ms.locfileid: "131056611"
 landingContent:
 - title: Acerca de Azure Defender para IoT para creadores de dispositivos
   linkLists:
