--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -616,4 +616,4 @@
     - name: Diagrama de arquitectura de referencia
       href: reference-architecture-diagram.md
     - name: Documentación del cliente
-      href: 'https://docs.microsoft.com/marketplace/'
+      href: /marketplace/
