--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -56,6 +56,8 @@
       href: front-door-health-probes.md
     - name: Cómo Front Door combina el enrutamiento para una solicitud
       href: front-door-route-matching.md
+    - name: Cifrado TLS de un extremo a otro
+      href: concept-end-to-end-tls.md
     - name: Compatibilidad con HTTP/2
       href: front-door-http2.md
     - name: Compatibilidad con el protocolo de encabezados HTTP
