--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -425,6 +425,23 @@
             - name: GetArrayElements
               href: /stream-analytics-query/getarrayelements-azure-stream-analytics
               maintainContext: true
+        - name: Operadores bit a bit
+          items:
+            - name: Introducción a los operadores bit a bit
+              href: /stream-analytics-query/bitwise-operators-azure-stream-analytics
+              maintainContext: true
+            - name: AND bit a bit
+              href: /stream-analytics-query/bitwise-and-azure-stream-analytics
+              maintainContext: true
+            - name: OR bit a bit
+              href: /stream-analytics-query/bitwise-or-azure-stream-analytics
+              maintainContext: true
+            - name: XOR bit a bit
+              href: /stream-analytics-query/bitwise-xor-azure-stream-analytics
+              maintainContext: true
+            - name: NOT bit a bit
+              href: /stream-analytics-query/bitwise-not-azure-stream-analytics
+              maintainContext: true
         - name: Funciones de conversión
           items:
             - name: Introducción a las funciones de conversión
@@ -556,11 +573,20 @@
             - name: CONCAT
               href: /stream-analytics-query/concat-azure-stream-analytics
               maintainContext: true
+            - name: CONCAT_WS
+              href: /stream-analytics-query/concat-ws-azure-stream-analytics
+              maintainContext: true
+            - name: LEFT
+              href: /stream-analytics-query/left-azure-stream-analytics
+              maintainContext: true
             - name: LEN
               href: /stream-analytics-query/len-azure-stream-analytics
               maintainContext: true
             - name: LOWER
               href: /stream-analytics-query/lower-azure-stream-analytics
+              maintainContext: true
+            - name: LTRIM
+              href: /stream-analytics-query/ltrim-azure-stream-analytics
               maintainContext: true
             - name: NCHAR
               href: /stream-analytics-query/nchar-azure-stream-analytics
@@ -574,8 +600,32 @@
             - name: REPLACE
               href: /stream-analytics-query/replace-azure-stream-analytics
               maintainContext: true
+            - name: REPLICATE
+              href: /stream-analytics-query/replicate-azure-stream-analytics
+              maintainContext: true
+            - name: REVERSE
+              href: /stream-analytics-query/reverse-azure-stream-analytics
+              maintainContext: true
+            - name: RIGHT
+              href: /stream-analytics-query/right-azure-stream-analytics
+              maintainContext: true
+            - name: RTRIM
+              href: /stream-analytics-query/rtrim-azure-stream-analytics
+              maintainContext: true
+            - name: SPACE
+              href: /stream-analytics-query/space-azure-stream-analytics
+              maintainContext: true
+            - name: STUFF
+              href: /stream-analytics-query/stuff-azure-stream-analytics
+              maintainContext: true
             - name: SUBSTRING
               href: /stream-analytics-query/substring-azure-stream-analytics
+              maintainContext: true
+            - name: TRANSLATE
+              href: /stream-analytics-query/translate-azure-stream-analytics
+              maintainContext: true
+            - name: TRIM
+              href: /stream-analytics-query/trim-azure-stream-analytics
               maintainContext: true
             - name: UNICODE
               href: /stream-analytics-query/unicode-azure-stream-analytics
@@ -648,6 +698,9 @@
           maintainContext: true
         - name: MATCH_RECOGNIZE
           href: /stream-analytics-query/match-recognize-stream-analytics
+          maintainContext: true
+        - name: NULLIF
+          href: /stream-analytics-query/nullif-azure-stream-analytics
           maintainContext: true
         - name: COMBINACIÓN de datos de referencia
           href: /stream-analytics-query/reference-data-join-azure-stream-analytics
