--- a/articles/cdn/index.yml
+++ b/articles/cdn/index.yml
@@ -6,15 +6,15 @@ metadata:
   description: Obtenga información acerca de Azure Content Delivery Network, que es una solución para ofrecer contenido con un ancho de banda alto y que se puede hospedar en Azure o en cualquier otra ubicación.
   ms.service: azure-cdn
   ms.topic: landing-page
-  author: asudbring
-  ms.author: allensu
+  author: duongau
+  ms.author: duau
   ms.date: 02/24/2020
-  ms.openlocfilehash: 194b89058b68b73ff651e9fef85717fcc578d66a
-  ms.sourcegitcommit: 400f473e8aa6301539179d4b320ffbe7dfae42fe
+  ms.openlocfilehash: c6a346872114a61506e26cd3bdf2b9819b7b4ac1
+  ms.sourcegitcommit: 702df701fff4ec6cc39134aa607d023c766adec3
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 10/28/2020
-  ms.locfileid: "92777783"
+  ms.lasthandoff: 11/03/2021
+  ms.locfileid: "131461368"
 landingContent:
 - title: Acerca de Azure CDN
   linkLists:
