--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -106,7 +106,7 @@
     - name: Página de preguntas y respuestas de Microsoft para Redes
       href: /answers/topics/azure-virtual-network.html
     - name: Comentarios de redes
-      href: 'https://feedback.azure.com/forums/217313-networking?category_id=77469'
+      href: 'https://feedback.azure.com/d365community/forum/8ae9bf04-8326-ec11-b6e6-000d3a4f0789'
     - name: Precios
       href: 'https://azure.microsoft.com/pricing/details/private-link/'
     - name: Calculadora de precios
